海の紹介に変えた

--- a/index.html
+++ b/index.html
@@ -1,34 +1,74 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>World Oceans</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
+            padding: 0;
+            background-color: #f0f8ff;
         }
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
+            background-color: #1e90ff;
+            color: white;
             text-align: center;
+            padding: 1em 0;
         }
-        main {
-            margin-top: 20px;
+        nav {
+            background-color: #4682b4;
+            color: white;
+            text-align: center;
+            padding: 0.5em 0;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        section {
+            padding: 2em;
+        }
+        h2 {
+            color: #1e90ff;
+        }
+        .ocean {
+            margin-bottom: 2em;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Page</h1>
+        <h1>Welcome to the World of Oceans</h1>
     </header>
-    <main>
-        <h2>About Me</h2>
-        <p>Hello! This is my GitHub Page. Here you can find information about my projects and interests.</p>
-    </main>
+    <nav>
+        <a href="#pacific">Pacific Ocean</a>
+        <a href="#atlantic">Atlantic Ocean</a>
+        <a href="#indian">Indian Ocean</a>
+        <a href="#southern">Southern Ocean</a>
+        <a href="#arctic">Arctic Ocean</a>
+    </nav>
+    <section id="pacific" class="ocean">
+        <h2>Pacific Ocean</h2>
+        <p>The Pacific Ocean is the largest and deepest of Earth's oceanic divisions. It extends from the Arctic Ocean in the north to the Southern Ocean in the south, bounded by Asia and Australia in the west and the Americas in the east.</p>
+    </section>
+    <section id="atlantic" class="ocean">
+        <h2>Atlantic Ocean</h2>
+        <p>The Atlantic Ocean is the second-largest of the world's oceans, with an area of about 106,460,000 square kilometers (41,100,000 square miles). It covers approximately 20 percent of Earth's surface and about 29 percent of its water surface area.</p>
+    </section>
+    <section id="indian" class="ocean">
+        <h2>Indian Ocean</h2>
+        <p>The Indian Ocean is the third-largest of the world's oceanic divisions, covering 70,560,000 km² (27,240,000 sq mi). It is bounded by Asia to the north, Africa to the west, and Australia to the east.</p>
+    </section>
+    <section id="southern" class="ocean">
+        <h2>Southern Ocean</h2>
+        <p>The Southern Ocean, also known as the Antarctic Ocean or the Austral Ocean, comprises the southernmost waters of the World Ocean, generally taken to be south of 60° S latitude and encircling Antarctica.</p>
+    </section>
+    <section id="arctic" class="ocean">
+        <h2>Arctic Ocean</h2>
+        <p>The Arctic Ocean is the smallest and shallowest of the world's five major oceans. It is located mostly in the Arctic North Polar Region, and it is the coldest of all the oceans.</p>
+    </section>
 </body>
 </html>
