--- a/index.html
+++ b/index.html
@@ -1,74 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Oceans</title>
+    <title>猫の紹介</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #FFA500;
             margin: 0;
             padding: 0;
-            background-color: #f0f8ff;
         }
         header {
-            background-color: #1e90ff;
+            background-color: #FF4500;
             color: white;
             text-align: center;
             padding: 1em 0;
-        }
-        nav {
-            background-color: #4682b4;
-            color: white;
-            text-align: center;
-            padding: 0.5em 0;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
         }
         section {
             padding: 2em;
         }
         h2 {
-            color: #1e90ff;
+            color: #FF6347;
         }
-        .ocean {
+        .cat {
             margin-bottom: 2em;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to the World of Oceans</h1>
+        <h1>猫の世界へようこそ</h1>
     </header>
-    <nav>
-        <a href="#pacific">Pacific Ocean</a>
-        <a href="#atlantic">Atlantic Ocean</a>
-        <a href="#indian">Indian Ocean</a>
-        <a href="#southern">Southern Ocean</a>
-        <a href="#arctic">Arctic Ocean</a>
-    </nav>
-    <section id="pacific" class="ocean">
-        <h2>Pacific Ocean</h2>
-        <p>The Pacific Ocean is the largest and deepest of Earth's oceanic divisions. It extends from the Arctic Ocean in the north to the Southern Ocean in the south, bounded by Asia and Australia in the west and the Americas in the east.</p>
+    <section id="persian" class="cat">
+        <h2>ペルシャ猫</h2>
+        <p>ペルシャ猫は長毛種で、フラットな顔が特徴です。落ち着いた性格で、家庭での生活に非常に適しています。</p>
     </section>
-    <section id="atlantic" class="ocean">
-        <h2>Atlantic Ocean</h2>
-        <p>The Atlantic Ocean is the second-largest of the world's oceans, with an area of about 106,460,000 square kilometers (41,100,000 square miles). It covers approximately 20 percent of Earth's surface and about 29 percent of its water surface area.</p>
+    <section id="siamese" class="cat">
+        <h2>シャム猫</h2>
+        <p>シャム猫はスリムな体と短い被毛が特徴で、非常に社交的で声が大きい猫です。人懐っこく、遊ぶのが大好きです。</p>
     </section>
-    <section id="indian" class="ocean">
-        <h2>Indian Ocean</h2>
-        <p>The Indian Ocean is the third-largest of the world's oceanic divisions, covering 70,560,000 km² (27,240,000 sq mi). It is bounded by Asia to the north, Africa to the west, and Australia to the east.</p>
+    <section id="mainecoon" class="cat">
+        <h2>メインクーン</h2>
+        <p>メインクーンは大きな体とふさふさの尾が特徴で、温和で社交的な性格です。飼い主に対して非常に愛情深いです。</p>
     </section>
-    <section id="southern" class="ocean">
-        <h2>Southern Ocean</h2>
-        <p>The Southern Ocean, also known as the Antarctic Ocean or the Austral Ocean, comprises the southernmost waters of the World Ocean, generally taken to be south of 60° S latitude and encircling Antarctica.</p>
+    <section id="bengal" class="cat">
+        <h2>ベンガル猫</h2>
+        <p>ベンガル猫は野性的な見た目が特徴で、非常に活発で遊び好きです。高い知能を持ち、トリックを学ぶのが得意です。</p>
     </section>
-    <section id="arctic" class="ocean">
-        <h2>Arctic Ocean</h2>
-        <p>The Arctic Ocean is the smallest and shallowest of the world's five major oceans. It is located mostly in the Arctic North Polar Region, and it is the coldest of all the oceans.</p>
+    <section id="scottishfold" class="cat">
+        <h2>スコティッシュフォールド</h2>
+        <p>スコティッシュフォールドは耳が前に折れているのが特徴で、穏やかな性格を持っています。家庭でのんびり過ごすのが好きです。</p>
     </section>
 </body>
 </html>
