ちょっと変更

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #FFA500;
+            background-color: #FFC0CB;
             margin: 0;
             padding: 0;
         }
@@ -16,6 +16,9 @@
             color: white;
             text-align: center;
             padding: 1em 0;
+        }
+        header h1 {
+            font-size: 2em; /* 文字サイズを2倍に設定 */
         }
         section {
             padding: 2em;
@@ -43,10 +46,6 @@
     <section id="mainecoon" class="cat">
         <h2>メインクーン</h2>
         <p>メインクーンは大きな体とふさふさの尾が特徴で、温和で社交的な性格です。飼い主に対して非常に愛情深いです。</p>
-    </section>
-    <section id="bengal" class="cat">
-        <h2>ベンガル猫</h2>
-        <p>ベンガル猫は野性的な見た目が特徴で、非常に活発で遊び好きです。高い知能を持ち、トリックを学ぶのが得意です。</p>
     </section>
     <section id="scottishfold" class="cat">
         <h2>スコティッシュフォールド</h2>
