--- a/index.html
+++ b/index.html
@@ -3,53 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>猫の紹介</title>
+    <title>宇宙船のホームページ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #FFC0CB;
             margin: 0;
             padding: 0;
+            text-align: center;
+            background-color: #f0f0f0;
         }
         header {
-            background-color: #FF4500;
-            color: white;
-            text-align: center;
-            padding: 1em 0;
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
         }
-        header h1 {
-            font-size: 2em; /* 文字サイズを2倍に設定 */
+        .content {
+            padding: 20px;
         }
-        section {
-            padding: 2em;
+        img {
+            max-width: 100%;
+            height: auto;
         }
-        h2 {
-            color: #FF6347;
-        }
-        .cat {
-            margin-bottom: 2em;
+        .description {
+            margin: 20px auto;
+            max-width: 800px;
+            text-align: left;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>猫の世界へようこそ</h1>
+        <h1>宇宙船の世界へようこそ</h1>
     </header>
-    <section id="persian" class="cat">
-        <h2>ペルシャ猫</h2>
-        <p>ペルシャ猫は長毛種で、フラットな顔が特徴です。落ち着いた性格で、家庭での生活に非常に適しています。</p>
-    </section>
-    <section id="siamese" class="cat">
-        <h2>シャム猫</h2>
-        <p>シャム猫はスリムな体と短い被毛が特徴で、非常に社交的で声が大きい猫です。人懐っこく、遊ぶのが大好きです。</p>
-    </section>
-    <section id="mainecoon" class="cat">
-        <h2>メインクーン</h2>
-        <p>メインクーンは大きな体とふさふさの尾が特徴で、温和で社交的な性格です。飼い主に対して非常に愛情深いです。</p>
-    </section>
-    <section id="scottishfold" class="cat">
-        <h2>スコティッシュフォールド</h2>
-        <p>スコティッシュフォールドは耳が前に折れているのが特徴で、穏やかな性格を持っています。家庭でのんびり過ごすのが好きです。</p>
-    </section>
+    <div class="content">
+        <img src="1319.jpg" alt="宇宙船の画像">
+        <div class="description">
+            <h2>宇宙船について</h2>
+            <p>このページでは、最新の宇宙船に関する情報を紹介しています。私たちの宇宙船は、最先端の技術を駆使して設計されており、安全性と効率性を兼ね備えています。宇宙探査の新しい時代を切り開くこの宇宙船について、詳しくご覧ください。</p>
+        </div>
+    </div>
 </body>
 </html>
