--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #f0f0f0;
+            background-color: #e6e6fa; /* 薄い紫色の背景 */
         }
         header {
             background-color: #333;
@@ -23,6 +23,8 @@
         img {
             max-width: 100%;
             height: auto;
+            float: right; /* 画像を右寄せ */
+            margin: 0 0 20px 20px; /* 画像とテキストの間にスペースを追加 */
         }
         .description {
             margin: 20px auto;
