--- a/index.html
+++ b/index.html
@@ -1,48 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>宇宙船のホームページ</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #e6e6fa; /* 薄い紫色の背景 */
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-        }
-        .content {
-            padding: 20px;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            float: right; /* 画像を右寄せ */
-            margin: 0 0 20px 20px; /* 画像とテキストの間にスペースを追加 */
-        }
-        .description {
-            margin: 20px auto;
-            max-width: 800px;
-            text-align: left;
-        }
-    </style>
+    <title>Phaser Shooting Game</title>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>宇宙船の世界へようこそ</h1>
-    </header>
-    <div class="content">
-        <img src="1319.jpg" alt="宇宙船の画像">
-        <div class="description">
-            <h2>宇宙船について</h2>
-            <p>このページでは、最新の宇宙船に関する情報を紹介しています。私たちの宇宙船は、最先端の技術を駆使して設計されており、安全性と効率性を兼ね備えています。宇宙探査の新しい時代を切り開くこの宇宙船について、詳しくご覧ください。</p>
-        </div>
-    </div>
+    <script src="game.js"></script>
 </body>
 </html>
